--- a/343_R_Lab_01.md
+++ b/343_R_Lab_01.md
@@ -8,7 +8,7 @@ More advanced concepts are explained in other examples.
 
 ## Opening a data file
 
-We begin by opeining a provided .csv file. Note the syntax. I always
+We begin by opening a provided .csv file. Note the syntax. I always
 call my R data object “data.” Remember to check the top and the bottom
 of the data for any blank cells or other problems. The dimension will
 tell you if your rows and columns match what they should be.
@@ -51,7 +51,7 @@ Here, we look at the WTI oil price data from class. It has 3 variables
 
 Now we omit all “NAs” (if necessary), and keep only columns 2 and 3.
 Note the syntax for *\[rows, columns\]* and the “combinaton” (group) of
-2 and 3.
+2 and 3. The "rows" part, before the comma, is empty--so all rows are used in these columns.
 
 ``` r
 data<-na.omit(data[,c(2,3)])
@@ -78,7 +78,7 @@ head(data)
 ## Making a Time Series
 
 Next, we make a time series. Note the *ts()* formula, with a start date
-of January 1980 and monthly frequency. We can plot out real WTI series
+of January 1980 and monthly frequency. We can plot the real WTI series
 (the third column). We got rid of the dates column, but this object
 incorporates them.
 
@@ -253,7 +253,7 @@ plot(data2[,c(1,3)])
 ![](343_R_Lab_01_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 But these plots need some cleaning up. We can change the point type and
-color,, re-label the axes, and add a title.
+color, re-label the axes, and add a title.
 
 ``` r
 data2<-as.data.frame(na.omit(data[,4:6]))
@@ -263,7 +263,7 @@ plot(data2[,c(1,3)],pch=20,col="dark grey", xlab="Changes in WTI price",
 
 ![](343_R_Lab_01_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
-We can also re-plotting the real oil price, with new labels (which are
+We can also re-plot the real oil price, with new labels (which are
 blank), custom line width, and a title. We also add a horizontal line
 (with custom color, line type, and line width) showing the average over
 time.
